--- a/SwiftStudy/Info.plist
+++ b/SwiftStudy/Info.plist
@@ -19,5 +19,12 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>fetch</string>
+		<string>processing</string>
+		<string>push-to-talk</string>
+		<string>voip</string>
+	</array>
 </dict>
 </plist>
